# TheApi

./: .buildinfo  404.html  LICENSE  README.md  api.html  client.html  conf.py  css-beautify-minify (1).css  genindex.html  index.html  intro.html  methods.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  requirements.txt  saavn.html  script.py  search.html  searchindex.js  setup.cfg  setup.py  test.html
.github/workflows/: Pylint.yml  api_check.yml  docs.yml  publish.yml  sphnix.yml  tag-release.yml
TheApi/: __init__.py  _request.py  _upload.py  api.py  errors.py  func.py  functions.py  saavn.py  sync.py  upload.py  wordle.py
_autosummary/: TheApi.TheApi.html  TheApi.api.TheApi.html  TheApi.html
_modules/: index.html
_modules/TheApi/: api.html
_sources/: client.rst.txt  index.rst.txt  methods.rst.txt
_sources/api/: animechan.rst.txt  avatar.rst.txt  bing_image.rst.txt  blackpink.rst.txt  carbon.rst.txt  cat.rst.txt  dog.rst.txt  domain_search.rst.txt  fakerapi.rst.txt  fox.rst.txt  gen_qr.rst.txt  generate_pdf.rst.txt  get_advice.rst.txt  get_btc_value.rst.txt  get_fake_addresses.rst.txt  get_fake_credit_cards.rst.txt  get_fake_images.rst.txt  get_fake_persons.rst.txt  get_hindi_jokes.rst.txt  get_jokes.rst.txt  get_uselessfact.rst.txt  get_word_definitions.rst.txt  get_words.rst.txt  github_search.rst.txt  google_search.rst.txt  hindi_quote.rst.txt  hug.rst.txt  index.rst.txt  meme.rst.txt  neko.rst.txt  pypi.rst.txt  quote.rst.txt  riddle.rst.txt  stackoverflow_search.rst.txt  upload_image.rst.txt  write.rst.txt  (+1 more)
_static/: documentation_options.js
api/: TheApi.Client.animechan.html  TheApi.Client.avatar.html  TheApi.Client.bing_image.html  TheApi.Client.blackpink.html  TheApi.Client.carbon.html  TheApi.Client.cat.html  TheApi.Client.dog.html  TheApi.Client.domain_search.html  TheApi.Client.fakerapi.html  TheApi.Client.fox.html  TheApi.Client.gen_qr.html  TheApi.Client.generate_pdf.html  TheApi.Client.get_advice.html  TheApi.Client.get_btc_value.html  TheApi.Client.get_fake_addresses.html  TheApi.Client.get_fake_credit_cards.html  TheApi.Client.get_fake_images.html  TheApi.Client.get_hindi_jokes.html  TheApi.Client.get_jokes.html  TheApi.Client.get_uselessfact.html  TheApi.Client.get_word_definitions.html  TheApi.Client.get_words.html  TheApi.Client.github_search.html  TheApi.Client.hindi_quote.html  TheApi.Client.hug.html  TheApi.Client.meme.html  TheApi.Client.neko.html  TheApi.Client.pypi.html  TheApi.Client.quote.html  TheApi.Client.riddle.html  TheApi.Client.stackoverflow_search.html  TheApi.Client.upload_image.html  TheApi.Client.wikipedia.html  TheApi.Client.write.html  animechan.html  avatar.html  bing_image.html  blackpink.html  carbon.html  cat.html  (+47 more)
docs/: index.html  index.rst  requirements.txt  saavn.html
summary/: TheApi.api.TheApi.html
tem/: config.mako
templates /: config.mako
(+63 files in other folders)
