[project]
name = "TheApix"
version = "1.2.0"
authors = [
    { name = "Vivek Kumar" }
]
description = "TheApi is a Python library for asynchronous interactions with various public APIs, enabling diverse functionalities and data retrieval."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp",
    "aiofiles",
    "requests",
    "pillow==9.5.0"
]

[project.urls]
Homepage = "https://github.com/Vivekkumar-IN/TheApi/blob/main/README.md"
Issues = "https://github.com/Vivekkumar-IN/TheApi/issues"
Source = "https://github.com/Vivekkumar-IN/TheApi"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
